tests/ui/associated-types/param-env-shadowing-issue-149910.rs
trait Trait {
    type Assoc;
}

impl<T> Trait for T {
    type Assoc = T;
}

fn foo<T: Trait>(x: T) -> T::Assoc {
    x
    //~^ ERROR mismatched types
}

fn main() {}
